hphp/hack/test/sound_dynamic/typing/enumbox.bad.php.exp
File "enumbox.bad.php", line 11, characters 40-44:
Class `EBox` cannot support dynamic because property `item` does not have an enforceable type (Typing[4402])
  File "enumbox.bad.php", line 11, characters 38-38:
  Property `item` has type `E`
